--- a/eas.css
+++ b/eas.css
@@ -1,5 +1,14 @@
 /* Etch-A-Sketch Stylesheet */
 
+h1 {
+   text-align: center;
+}
+
+.controls {
+   display: flex;
+   justify-content: center;
+}
+
 .frame {
    width: 800px;
    height: 900px;
@@ -10,8 +19,6 @@
    justify-content: space-between;
    background-color: red;
    border-radius: 40px;
-
-
 }
 
 .gridContainer {
@@ -30,15 +37,15 @@
    background-color: lightslategray;
    z-index: 1;
    margin-top: 80px;
-   opacity: 0.5;
+   opacity: 1;
 }
-
-
 
 .knobs {
    display: flex;
    justify-content: space-between;
+   align-items: center;
    width: 700px;
+   height: 164px;
    margin-bottom: 50px;
 }
 .knob1, .knob2 {
@@ -47,6 +54,11 @@
    width: 80px;
    border-radius: 40px;
    background-color: whitesmoke;
+}
+
+.logo {
+   height: 60%;
+   width: auto;
 }
 
 .controls {
